@@ -1,5 +1,8 @@
 2004-10-25  Vincent Noel  <vnoel@cox.net>
 
+	* logview-search.c (logview_tree_model_search_iter_foreach):
+	Correct display problem at startup.
+
 	* logview.c (CreateMainWin): Use gtk_ui_manager.
 
 	* logview-search-dialog.h: 
